--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "cd src && node index.js",
-    "lint": "eslint . --ext .js,.mjs,.cjs"
+    "lint": "eslint ."
   },
   "license": "MIT",
   "dependencies": {
