--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "cd src && node index.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "license": "MIT",
   "dependencies": {
@@ -16,6 +17,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/jest": "^29.5.14",
+    "coverage-badge-creator": "^1.0.19",
     "eslint": "^9.19.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
