--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,8 @@ jobs:
             },   
             logging:    {
               source: 'jwt-pizza-service',
-              userId: ${{ secrets.LOGGING_USER_ID }},
               url: '${{ secrets.LOGGING_URL }}',
-              apiKey: '${{ secrets.LOGGING_API_KEY }}',
+              apiKey: '${{ secrets.LOGGING_USER_ID }}:${{ secrets.LOGGING_API_KEY }}',
             },
           };" > src/config.js
 
