--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
             logging:    {
               source: 'jwt-pizza-service',
               url: '${{ secrets.LOGGING_URL }}',
-              apiKey: '${{ secrets.LOGGING_USER_ID }}:${{ secrets.LOGGING_API_KEY }}',
+              apiKey: '${{ secrets.LOGGING_API_KEY }}',
             },
           };" > src/config.js
 
