--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,6 +67,7 @@ jobs:
               source: 'jwt-pizza-service',
               url: '${{ secrets.LOGGING_URL }}',
               apiKey: '${{ secrets.LOGGING_API_KEY }}',
+              userId: '${{ secrets.LOGGING_USER_ID }}',
             },
           };" > src/config.js
 
